@@ -73,7 +73,6 @@ Known Bugs:
 
 Transitional Code Removal (after 2.5):
 
-* Remove deprecated autogen.sh file.
 * Remove ISO C99 capable compiler requirement warning.
 * Remove Autoconf version 2.64 requirement warning.
 * Remove FLAC version 1.1.3 requirement warning.
