@@ -1,6 +1,7 @@
 2.6.0 - "Usability"
 	* Removed functionality:
 	  - Transitional code from the previous release
+	  - autogen.sh in favour of autoreconf(1)
 
 2.5.0 - "Consolidation"
 	* Autotools and packaging changes:
